--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Titulo de la pagina</h1>
-    <p>esto es un parrafo</>
+    <p>esto es un parrafo</p>
+    <p>segundo parrafo</p>
 </body>
 </html>
